--- a/baitapjava/index.html
+++ b/baitapjava/index.html
@@ -26,11 +26,15 @@
         <label for="phone">Phone:</label>
         <input type="text" id="phone" name="phone"><br><br>
         <button type="button" onclick="addContact()">Add Contact</button>
+        <br>
+        <button type="button" onclick="deletebt()">Delete</button>
       </form>
       
       <ul id="contacts-list">
       </ul>
-      
+      <!-- <h1>Countdown Timer</h1>
+	<div id="countdown"></div> -->
+
 </body>
 
 <!-- <source src="" \> -->
